--- a/train1.html
+++ b/train1.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <img src="images/ptonico.png" alt="oops something wrong " />
+    <img src="images/ptonico.png" alt="IT LOOKS LIKE SOMETHING BAD HAPPEN " />
     <h1><i> THIS IS SIRAJUDIN SEID </i></h1>
     <!--the basics of css starts from here -->
     <p class="the_first">
